# bake

./: Cargo.toml  README.md  plan.md
helloworld/: bake.toml
src/: config.rs  lib.rs  main.rs  project.rs
testing/: bake.toml
