[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
regex = "1.7"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
cc = "1.0"