[package]
name = "bake"
version = "0.1.0"
authors = ["Jawad Ahmed <jawad.w.ahmed@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4"
once_cell = "1.17"
regex = "1.7"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
